# egginc-mission-notifier.rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: bot.rs  config.rs  database.rs  egg.rs  functions.rs  main.rs  types.rs
src/bot/: admin.rs  arg.rs  command.rs  contract.rs  functions.rs  missions.rs  mod.rs
src/database/: context.rs  event.rs  handler.rs  mod.rs  types.rs  versions.rs
src/database/versions/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs
src/egg/: coop.rs  definitions.rs  ei.proto  functions.rs  mod.rs  monitor.rs  proto.rs  types.rs
src/egg/monitor/: contract.rs  rocket.rs
