[package]
name = "egginc-mission-notifier"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22.1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
futures-util = "0.3"
itertools = "0.13"
kstool = "0.2"
kstool-helper-generator = "0.4"
log = "0.4"
prost = "0.13"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tap = "1"
teloxide = { version = "0.13", default-features = false, features = [
    "rustls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[build-dependencies]
prost-build = "0.13.4"
