[package]
name = "egginc-mission-notifier"
version = "2.5.1"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
flate2 = { version = "1.0.35", features = ["zlib"] }
futures-util = "0.3"
itertools = "0.14"
kstool = "0.2"
kstool-helper-generator = "0.4"
log = "0.4"
minicbor-serde = { version = "0.4.0", features = ["alloc"] }
prost = "0.13"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tap = "1"
teloxide = { version = "0.13", default-features = false, features = [
    "rustls",
    "macros",
    "ctrlc_handler",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[build-dependencies]
prost-build = "0.13"

[package.metadata.cross.target.aarch64-unknown-linux-musl]
#image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:main"
pre-build = [
    "apt update && apt install -y unzip",
    "curl -Lo protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v25.6/protoc-25.6-linux-x86_64.zip && unzip protoc.zip -d /usr/",
]

[package.metadata.cross.build]
env.passthrough = ["PROTOC=/usr/bin/protoc"]
